# quant-risk-fraud-model

./: .gitignore  README.md  pyproject.toml  requirements.txt  train_baseline.py  train_logistic.py
artifacts/: README.md  baseline_logistic.joblib  baseline_logistic.metrics.json
data/: training_data.csv
notebooks/: 01_eda.ipynb  02_modeling.ipynb  03_evaluation.ipynb  04_governance_explainability.ipynb
scripts/: generate_readme_roc.py  test_api_payloads.py
src/: __init__.py  config.py
src/api/: audit.py  main.py  metrics.py  model_loader.py  schemas.py
src/data/: loaders.py  preprocessing.py  schema.py  synthetic_generator.py
src/evaluation/: __init__.py  metrics.py  plots.py
src/explainability/: __init__.py  reason_codes.py  shap_explainer.py
src/features/: feature_engineering.py
src/governance/: __init__.py  bias_checks.py  stability.py
src/models/: __init__.py  calibration.py  gbm.py  logistic.py  train_gbm.py  train_logistic.py
src/quant_risk_fraud_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py  test_data_schema.py  test_evaluation.py  test_models.py
