[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-risk-fraud-model"
version = "0.1.0"
description = "A quantitative risk and fraud scoring engine with statistical models, gradient boosting, calibration, governance checks, and a FastAPI scoring service."
authors = [
    { name = "Eric Galante" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "xgboost",
    "lightgbm",
    "statsmodels",
    "matplotlib",
    "seaborn",
    "shap",
    "fastapi",
    "uvicorn",
    "pydantic",
    "joblib"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
warn_return_any = true
strict_optional = true